--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .modal {
     display: none;
     position: fixed;
